--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject", 
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "deploy": "gh-pages -d build"  
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +47,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": " https://andrey-25.github.io/awx/"
+  "homepage": "https://andrey-25.github.io/awx/"
 }
